--- a/assets/scss/tailwind.scss
+++ b/assets/scss/tailwind.scss
@@ -138,7 +138,8 @@ nav[role="off-canvas"] {
         background: hsla(44, 94%, 50%, 0.65);
       }
       &:nth-child(3) {
-        background: hsla(114, 94%, 50%, 0.65);
+         // background: hsla(114, 94%, 50%, 0.65);
+         background: hsla(64, 100%, 43%, 0.65);
       }
       &:nth-child(4) {
         background: hsla(184, 94%, 50%, 0.65);
