--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,4 @@
+$bluekey-blue: #06446c;
 
 * {
   box-sizing: border-box;
@@ -81,7 +82,7 @@ label {
 /* big screens */
 nav[role="off-canvas"] {
   position: relative;
-  width: 50em;
+  width: 45em;
   margin: 0 auto;
   transition-duration: 0.3s, 0.5s;
   transition-timing-function: ease-in-out;
@@ -134,8 +135,8 @@ nav[role="off-canvas"] {
         background: hsla(44, 94%, 50%, 0.65);
       }
       &:nth-child(3) {
-        // background: hsla(114, 94%, 50%, 0.65);
-        background: hsla(64, 100%, 43%, 0.65);
+        background: hsla(114, 94%, 50%, 0.65);
+        // background: hsla(64, 100%, 43%, 0.65);
       }
       &:nth-child(4) {
         background: hsla(184, 94%, 50%, 0.65);
