Finish desktop menu proto

--- a/assets/scss/vars.scss
+++ b/assets/scss/vars.scss
@@ -1,5 +1,11 @@
 // COLORS
 $bluekey-blue: #06446c;
 
+$menu-red: hsla(11, 94%, 50%, 0.65);
+$menu-yellow: hsla(44, 94%, 50%, 0.65);
+$menu-green: hsla(114, 94%, 50%, 0.65);
+$menu-blue: hsla(184, 94%, 50%, 0.65);
+$menu-violet: hsla(224, 94%, 50%, 0.65);
+
 // HEIGHTS/WIDTHS
 $footer-height: 200px;
