Added OptiFutura font/reworked menu for mobile width/cleaned up css

--- a/assets/scss/old-tailwind.scss
+++ b/assets/scss/old-tailwind.scss
@@ -2,7 +2,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-$bluekey-blue: #06446c;
+$bk-blue: #06446c;
 
 * {
   box-sizing: border-box;
