--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,27 @@
-* {
+ @font-face {
+    font-family: "OptiFutura";
+    src: local("OptiFutura"),
+    url(~assets/fonts/OPTIFuturaAgMite-Four/OPTIFuturaAgMite-Four.otf) format("opentype");
+}
+
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+  margin: 0;
+}
+
+html {
+  font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, 'Helvetica Neue', Arial, sans-serif;
+  font-size: 1em;
+  word-spacing: 1px;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 html,
@@ -14,32 +36,3 @@ body {
   background-color: #ffffff;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%230603d8' fill-opacity='0.06'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
-
-/* custom scrollbar */
-// ::-webkit-scrollbar {
-//   width: 0.95em;
-// }
-
-// ::-webkit-scrollbar-track {
-//   background-color: rgba(217, 217, 217, 0.5);
-// }
-
-// ::-webkit-scrollbar-thumb {
-//   background: rgba(184, 184, 184, 0.5);
-//   box-shadow: inset 0.05em 0.05em 0 rgba(0, 0, 0, 0.1),
-//     inset 0 -0.05em 0 rgba(0, 0, 0, 0.07);
-// }
-
-/* dummy content */
-.content {
-  float: left;
-  font: 1em "Open Sans", sans-serif;
-  margin: 0.75em 0 0 0;
-  transition: margin 0.3s ease-in-out;
-
-  > p {
-    margin: 0.25em 0 0.75em 0;
-  }
-}
-
-
