--- a/assets/scss/vars.scss
+++ b/assets/scss/vars.scss
@@ -1,5 +1,11 @@
 // COLORS
-$bluekey-blue: #06446c;
+$bk-primary: #06446c;
+$bk-primary-opacity: #{$bk-primary}80;
+$bk-secondary: #0B73B8;
+$bk-secondary-opacity: #{$bk-secondary}80;
+$bk-dark: #032338;
+$bk-green: #017868;
+$bk-red: #B82C49;
 
 $menu-red: hsla(11, 94%, 50%, 0.65);
 $menu-yellow: hsla(44, 94%, 50%, 0.65);
@@ -9,3 +15,9 @@ $menu-violet: hsla(224, 94%, 50%, 0.65);
 
 // HEIGHTS/WIDTHS
 $footer-height: 200px;
+
+// MIXINS
+
+// @mixin color-opacity('base', 'opc') {
+// 	color: #{base}#{opc}
+// };
