Setup contact form using formspree

--- a/assets/scss/vars.scss
+++ b/assets/scss/vars.scss
@@ -16,6 +16,7 @@ $menu-violet: hsla(224, 94%, 50%, 0.65);
 // HEIGHTS/WIDTHS
 $footer-height: 200px;
 
+$dark-blue: #2c3e50;
 // MIXINS
 
 // @mixin color-opacity('base', 'opc') {
