--- a/assets/scss/vars.scss
+++ b/assets/scss/vars.scss
@@ -17,6 +17,7 @@ $menu-violet: hsla(224, 94%, 50%, 0.65);
 // HEIGHTS/WIDTHS
 $footer-height: 300px;
 $max-width: 1200px;
+$mobile-break: 700px;
 
 $dark-blue: #2c3e50;
 // MIXINS
