Finish bio layout/add Jesi bio

--- a/assets/scss/vars.scss
+++ b/assets/scss/vars.scss
@@ -19,6 +19,7 @@ $menu-violet: hsla(224, 94%, 50%, 0.65);
 
 // HEIGHTS/WIDTHS
 $footer-height: 300px;
+$container-width: 90vw;
 $max-width: 1200px;
 $mobile-break: 700px;
 
